--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -47,6 +47,17 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/W1:
+    name: W1
+    description: Really solid info
+    author: nicky.zulauf@yahoo.com
+    mode: batch
+    language: scala
+    createdAt: '2022-04-13 14:13:31'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
   workflows/Mary_Rath_MD:
     name: Mary_Rath_MD
     description: ''
@@ -81,5 +92,13 @@ pipelines:
       outputs: []
     dependencies: {}
 datasets: {}
-jobs: {}
+jobs:
+  jobs/Alise_Crona_MDAl_DenteMerri_O_Reilly_MD:
+    name: Alise_Crona_MDAl_DenteMerri_O_Reilly_MD
+    description: Really solid info
+    scheduler:
+      Nil: {}
+    schedulerJobUID: null
+    createdAt: '2022-04-13 14:13:32'
+    author: nicky.zulauf@yahoo.com
 libraries: []
